Typos, and readme update

--- a/readme
+++ b/readme
@@ -1,5 +1,8 @@
-readme holder
-hi
-Github for atom test
-test on clarissa top
-xdfghjk
+Hello,
+This is a website completely still in progress. I am still learning everything I
+will need to know to build this website. Please feel free to make any comments.
+
+The idea of this website will be to allow teachers to find materials for their
+classes, that are easy to find, well organize, and above all else free.
+
+the stack will be HTML/CSS/Jscript, python, and SQL. 
